# hpdexc

./: .gitignore  CMakeLists.txt  Makefile  debug.lldb  pyproject.toml  t.py  test.py
correct_test.dSYM/Contents/: Info.plist
correct_test.dSYM/Contents/Resources/DWARF/: correct_test
correct_test.dSYM/Contents/Resources/Relocations/aarch64/: correct_test.yml
src/cpp/: mannwhitney.cpp  mannwhitneyu.cpp  module.cpp  mwu_stats.cpp  rank_sum_test.cpp  reader.cpp  test_main.cpp
src/cpp/bindings/: module.cpp
src/cpp/include/: common.hpp  mannwhitney.hpp  mannwhitneyu.hpp  progress.hpp  rank_sum_core.hpp  reader.hpp  sort.hpp  tensor.hpp  view.hpp
src/python/hpdex/: __init__.py  de.py  h5ad_reader_csc.py  simple.py  sparse_de.py  stats.py
src/python/hpdex/backen/: __init__.py  kernel.pyi
src/python/hpdex/backend/: __init__.py  kernel.pyi
test_build/: CMakeLists.txt  test_main.cpp  test_mannwhitneyu
