[build-system]
requires = ["scikit-build-core>=0.8", "pybind11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "hpdexc"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.2",
    "build>=1.3.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[tool.scikit-build]
wheel.packages = ["src/python/hpdex"]
cmake.build-type = "Release"
cmake.args = ["-DPython3_EXECUTABLE=.venv/bin/python"]
